--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,11 +3,33 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello World</title>
+    <title>Floof Walkers</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.css">
     <link rel="stylesheet" href="/stylesheets/app.css" />
   </head>
   <body>
-    <%= yield %>
+
+    <div class="top-bar">
+      <div class="container">
+        <a class="logo" href="/floofs">Floofs</a>
+        <a class="logo" href="/floofs/new">Add A New Floof</a>
+        <a class="logo" href="/walkers">Floof Walkers</a>
+        <a class="logo" href="/walkers/new">Add A New Walker</a>
+      </div>
+    </div>
+
+    <%binding.pry%>
+    <% if flash.any? %>
+      <div class="flash">
+        <div class="container">
+          <%= flash[:message] %>
+        </div>
+      </div>
+    <% end %>
+
+    <div class="container">
+      <%= yield %>
+    </div>
 
     <script src="/javascripts/app.js"></script>
   </body>
