--- a/app/views/floofs/show.erb
+++ b/app/views/floofs/show.erb
@@ -26,7 +26,7 @@
         </select>
       </label>
       <label>Day
-        <select name="day_id">
+        <select name="day">
           <% @days.each do |day| %>
              <option value="<%=day%>"><%=day%></option>
           <% end %>
