--- a/app/views/walkers/show.erb
+++ b/app/views/walkers/show.erb
@@ -4,7 +4,7 @@
 <ul>
   <% @walker.walks.each do |walk| %>
     <li>
-      <%= walk.floof.name  %> - <%= walk.day %>
+      <%= walk.pup.name  %> - <%= walk.day %>
     </li>
   <% end %>
 </ul>
