--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Floof Walkers</title>
+    <title>Pup Walkers</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.css">
     <link rel="stylesheet" href="/stylesheets/app.css" />
   </head>
@@ -11,9 +11,9 @@
 
     <div class="top-bar">
       <div class="container">
-        <a class="logo" href="/floofs">Floofs</a>
-        <a class="logo" href="/floofs/new">Add A New Floof</a>
-        <a class="logo" href="/walkers">Floof Walkers</a>
+        <a class="logo" href="/pups">Pups</a>
+        <a class="logo" href="/pups/new">Add A New Pup</a>
+        <a class="logo" href="/walkers">Pup Walkers</a>
         <a class="logo" href="/walkers/new">Add A New Walker</a>
       </div>
     </div>
