--- a/app/views/pups/new.erb
+++ b/app/views/pups/new.erb
@@ -1,9 +1,9 @@
 
 <div class="grid-container">
   <div class="grid-x grid-padding-x">
-    <form id='form' class='medium-6 columns callout' action="/floofs" method="post">
-      <h3>New Floof Form</h3>
-      <label>Floof Name
+    <form id='form' class='medium-6 columns callout' action="/pups" method="post">
+      <h3>New Pup Form</h3>
+      <label>pup Name
         <input type="text" name='name' required/>
       </label>
       <input type='submit' value="Submit"></input>
