final code example

--- a/app/views/pups/new.erb
+++ b/app/views/pups/new.erb
@@ -3,7 +3,7 @@
   <div class="grid-x grid-padding-x">
     <form id='form' class='medium-6 columns callout' action="/pups" method="post">
       <h3>New Pup Form</h3>
-      <label>pup Name
+      <label>Pup Name
         <input type="text" name='name' required/>
       </label>
       <input type='submit' value="Submit"></input>
