Bos 26 final code

--- a/app/views/pups/new.erb
+++ b/app/views/pups/new.erb
@@ -4,7 +4,7 @@
     <form id='form' class='medium-6 columns callout' action="/pups" method="post">
       <h3>New Pup Form</h3>
       <label>Pup Name
-        <input type="text" name='name' required/>
+        <input type="text" name='name'/>
       </label>
       <input type='submit' value="Submit"></input>
     </form>
